# nv-sensors-fs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/systemd/: nv-sensors-fs.service
src/: file_system.rs  main.rs  nv_sensor_fs.rs  sensors.rs
