[package]
name = "nv-sensors-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive", "string"] }
fuser = "0.14.0"
is-root = "0.1.3"
libc = "0.2.158"
nvml-wrapper = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
